@@ -1,3 +1,7 @@
+23 February 2012: Wouter
+	- Fix to squelch 'network unreachable' errors from tcp connect in
+	  logs, high verbosity will show them.
+
 16 February 2012: Wouter
 	- iter_hints is now thread-owned in module env, and thus threadsafe.
 	- Fix prefetch and sticky NS, now the prefetch works.  It picks
